--- a/srv/index.html
+++ b/srv/index.html
@@ -12,6 +12,7 @@
         <button id="go_btn">🔍Go</button>
         <button id="clear_btn">🗑️</button>
     </div>
+    <progress id="element_progressbar" aria-label="Content loading…"></progress>
     <div id="div_content">
 
     </div>
