--- a/srv/index.html
+++ b/srv/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <div id="searchbar">
-        <input type="text" name="input_text" id="input_text">
+        <input type="text" name="input_text" id="input_text" placeholder="Напишіть питання або надайте посилання типу https://naurok.com.ua/test/...">
         <button id="go_btn">🔍Go</button>
         <button id="clear_btn">🗑️</button>
     </div>
     <progress id="element_progressbar" aria-label="Content loading…"></progress>
     <div id="div_content">
 
+    </div>
+    <h1 class="center">Попередні запити</h1>
+    <div id="hint_search">
     </div>
     <script src="client.js"></script>
 </body>
